AC_INIT([Labeled IO library], [0.1.0], [deian@cs.stanford.edu], [lio])

# Safety check: Ensure that we are in the correct source directory.
AC_CONFIG_SRCDIR([include/HsTmp.h])

AC_PROG_CC

AC_CONFIG_HEADERS([include/HsTmpConfig.h])

# Temp functions
AC_CHECK_FUNCS([mkstemp mkstemps mkdtemp])

AC_OUTPUT
