Name:           lio
Version:        0.9.0
Cabal-Version:  >= 1.8
Build-type:     Simple
License:        GPL
License-File:   LICENSE
Author:         HAILS team
Maintainer:	HAILS team <hails at scs dot stanford dot edu>
Stability:      Experimental
Synopsis:       Labeled IO Information Flow Control Library
Category:       Security
Description:
  The /Labeled IO/ (LIO) library provides information flow control for
  incorporating untrusted code within Haskell applications.  Most code
  should import module "LIO" and whichever label format the
  application is using (e.g., "LIO.DCLabel"). All untrusted code
  should be computations of type 'LIO', which trusted code can execute
  with 'evalLIO'.

  The paper that describes the core of LIO (modulo privileges),
  including motivation and formal modeling/proofs is available here:
  <http://arxiv.org/abs/1207.1457>


Extra-source-files:
  ACKNOWLEDGEMENTS

Library
  Build-Depends:
    base         >= 4.5 && < 5.0,
    transformers >= 0.2.2 && < 1.0,
    containers   >= 0.4.2.1 && < 1.0,
    bytestring   >= 0.9.2.1 && < 1.0,
    cereal       >= 0.3.5.1 && < 0.4


  Ghc-options: -Wall -Werror -fno-warn-orphans

  Exposed-modules:
    -- * Top-level exporter
    LIO
    -- * Label definition
    LIO.Label
    -- * Core library
    LIO.Core
    LIO.MonadLIO
    LIO.TCB
    -- * Labeled values
    LIO.Labeled
    LIO.Labeled.TCB
    -- * Labeled IORefs
    LIO.LIORef
    LIO.LIORef.TCB
    -- * Gates
    LIO.Gate
    -- * LIO privileges
    LIO.Privs
    LIO.Privs.TCB
    -- * Concurrency
    LIO.Concurrent
    LIO.Concurrent.TCB
    LIO.Concurrent.LMVar
    LIO.Concurrent.LMVar.TCB
    -- * DCLabels
    LIO.DCLabel
    LIO.DCLabel.Core
    LIO.DCLabel.Privs
    LIO.DCLabel.Privs.TCB
    LIO.DCLabel.Serialize
    LIO.DCLabel.DSL

test-suite lio_test
  type: exitcode-stdio-1.0
  hs-source-dirs: test_and_bench
  main-is: lio_test.hs

  ghc-options:
    -threaded -rtsopts

  build-depends:
    QuickCheck,
    HUnit,
    quickcheck-instances,
    test-framework,
    test-framework-quickcheck2,
    test-framework-hunit,
    base,
    lio,
    containers,
    bytestring,
    cereal

test-suite dclabel_test
  type: exitcode-stdio-1.0
  hs-source-dirs: test_and_bench
  main-is: dclabel_test.hs

  ghc-options:
    -threaded -rtsopts

  build-depends:
    QuickCheck,
    HUnit,
    quickcheck-instances,
    test-framework,
    test-framework-quickcheck2,
    test-framework-hunit,
    base,
    lio,
    containers,
    bytestring,
    cereal
