Name:           lio-eval
Version:        0.9.1.0
Cabal-Version:  >= 1.8
Build-type:     Simple
License:        GPL
License-File:   LICENSE
Author:         HAILS team
Maintainer:	HAILS team <hails at scs dot stanford dot edu>
Synopsis:       LIO Evaluation Suite
Category:       Test
Description:
  Tests and benchmarks for the Labeled IO library.

Library

test-suite lio_test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: lio_test.hs

  ghc-options:
    -threaded -rtsopts

  build-depends:
    base                       >= 4.5     && < 5.0
   ,containers                 >= 0.4.2
   ,bytestring                 >= 0.9
   ,QuickCheck                 >= 2.3
   ,quickcheck-instances       >= 0.3.0
   ,lio                        == 0.9.*
   ,quickcheck-lio-instances   == 0.9.*
   ,HUnit                      >= 1.2.5
   ,test-framework             >= 0.6
   ,test-framework-quickcheck2 >= 0.2.11
   ,test-framework-hunit       >= 0.2.7

test-suite dclabel_test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: dclabel_test.hs

  ghc-options:
    -threaded -rtsopts

  build-depends:
    base                       >= 4.5
   ,containers                 >= 0.4.2
   ,bytestring                 >= 0.9
   ,QuickCheck                 >= 2.3
   ,quickcheck-instances       >= 0.3.0
   ,cereal                     >= 0.3.5.1
   ,lio                        == 0.9.*
   ,quickcheck-lio-instances   == 0.9.*
   ,HUnit                      >= 1.2.5
   ,test-framework             >= 0.6
   ,test-framework-quickcheck2 >= 0.2.11
   ,test-framework-hunit       >= 0.2.7

benchmark dclabel_bench
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: dclabel_bench.hs

  ghc-options:
    -O2 -threaded -rtsopts

  build-depends:
    base                       >= 4.5
   ,containers                 >= 0.4.2
   ,bytestring                 >= 0.9
   ,QuickCheck                 >= 2.3
   ,quickcheck-instances       >= 0.3.0
   ,lio                        == 0.9.*
   ,quickcheck-lio-instances   == 0.9.*
   ,criterion                  >= 0.6.0.1
