Name:           lio-eval
Version:        0.10.0.1
Cabal-Version:  >= 1.8
Build-type:     Simple
License:        MIT
License-File:   LICENSE
Author:         HAILS team
Maintainer:	HAILS team <hails at scs dot stanford dot edu>
Synopsis:       LIO Evaluation Suite
Category:       Test
Description:
  Tests and benchmarks for the Labeled IO library.

Library

test-suite lio_test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: lio_test.hs

  ghc-options:
    -threaded -rtsopts

  build-depends:
    base                       >= 4.5
   ,containers
   ,bytestring
   ,QuickCheck
   ,quickcheck-instances
   ,lio
   ,quickcheck-lio-instances
   ,HUnit
   ,test-framework
   ,test-framework-quickcheck2
   ,test-framework-hunit

test-suite dclabel_test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: dclabel_test.hs

  ghc-options:
    -threaded -rtsopts

  build-depends:
    base                       >= 4.5
   ,binary
   ,containers
   ,bytestring
   ,QuickCheck
   ,quickcheck-instances
   ,lio
   ,quickcheck-lio-instances
   ,HUnit
   ,test-framework
   ,test-framework-quickcheck2
   ,test-framework-hunit

benchmark dclabel_bench
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: dclabel_bench.hs

  ghc-options:
    -O2 -threaded -rtsopts

  build-depends:
    base                       >= 4.5
   ,containers
   ,bytestring
   ,QuickCheck
   ,quickcheck-instances
   ,lio
   ,quickcheck-lio-instances
   ,criterion
