Name:           lio-handle
Version:        0.0.0.1
Cabal-Version:  >= 1.8
Build-type:     Simple
License:        GPL
License-File:   LICENSE
Author:         Hails team
Maintainer:	Hails team <hails at scs dot stanford dot edu>
Synopsis:       Labeled File System interface for LIO
Category:       Security
Description:
  A file system interface for LIO

Extra-source-files:
  examples/fsExample.hs


Source-repository head
  Type:     git
  Location: ssh://anonymous@gitstar.com/scs/lio.git

Library
  Build-Depends:
     base         >= 4.5     && < 5.0
   , binary       >= 0.5.0.0
   , containers   >= 0.4.2
   , bytestring   >= 0.9
   , filepath     >= 1.3.0.0
   , directory    >= 1.1.0.2
   , lio
   , xattr        >= 0.6.1
   , zlib         >= 0.5.3.1
   , SHA          >= 1.5.0.0

  GHC-options: -Wall -fno-warn-orphans

  Exposed-modules:
    LIO.Handle
    LIO.FS.TCB

