name:                lio-http-server
version:             0.0.0.1
synopsis:            Simple HTTP server running in the LIO monad.
description:         Simple, but general HTTP server implementation that works
                     in monads other than IO, designed with security in mind.
homepage:            https://github.com/plsyssec/lio
license:             MIT
license-file:        LICENSE
author:              Deian Stefan
maintainer:          deian@cs.ucsd.edu
copyright:           2017 Deian Stefan
category:            Web, Security
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LIO.HTTP.Server,
                       LIO.HTTP.Server.Responses,
                       LIO.HTTP.Server.Controller,
                       LIO.HTTP.Server.Frankie,
                       LIO.HTTP.Server.Frankie.Loggers
  build-depends:       ansi-terminal >= 0.6.2.1,
                       base          >= 4.7 && < 6,
                       bytestring    >= 0.10,
                       containers    >= 0.5.7.1,
                       http-types    >= 0.9.1,
                       lio           >= 0.11.6.0,
                       text          >= 1.2.2.1,
                       wai           >= 3.2.1.1,
                       warp          >= 3.2.11.1,
                       time          >= 1.6.0.1,
                       transformers  >= 0.5.2.0,
                       mtl           >= 2.2.1
  default-language:    Haskell2010
  GHC-options: -Wall -fno-warn-orphans

test-suite lio-http-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       HUnit,
                       test-framework,
                       test-framework-hunit,
                       text,
                       lio-http-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

extra-source-files
  examples/HellowWorld.hs

source-repository head
  type:     git
  location: https://github.com/plsyssec/lio
