name:                lio-simple
version:             0.0.0.2
synopsis:            LIO support for the Simple web framework
description:

  LIO support for the Simple web framework.
  See the 'lio' and 'simple' packages for more information.

homepage:            http://simple.cx
license:             LGPL-3
license-file:        LICENSE
author:              Hails team
maintainer:          hails@scs.stanford.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files:          template/*.tmpl

library
  build-depends:
      base < 6
    , bytestring
    , conduit
    , directory
    , filepath
    , wai >= 2.0
    , wai-extra
    , warp
    , http-types
    , base64-bytestring
    , simple
    , simple-templates
    , lio
    , text
    , unix

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  exposed-modules:
    LIO.Web.Simple
    LIO.Web.Simple.Auth
    LIO.Web.Simple.DCLabel
    LIO.Web.Simple.TCB
  default-language: Haskell2010

executable lio-simple
  Main-Is: lio-simple.hs
  ghc-options: -Wall -fno-warn-unused-do-bind
  build-depends:
      base < 6
    , aeson
    , attoparsec
    , bytestring
    , cmdargs
    , directory
    , filepath
    , simple-templates >= 0.7.0
    , text
    , unordered-containers
  default-language: Haskell2010


source-repository head
  type: git
  location: git://github.com/scslab/lio.git
