name:                lio-simple
version:             0.0.2.0
synopsis:            LIO support for the Simple web framework
description:

  \lio-simple\ adds LIO support for the \Simple\ \"framework-less\"
  web framework.  \Simple\ is minimalist, providing a lightweight base
  - the most basic \Simple\ app is little more than a WAI
  `Application` with some routing logic. Everything else (e.g.
  authentication, controllers, persistence, caching etc\') is provided
  in composable units, so you can include only the ones you need in
  your app, and easily replace with your own components.
  LIO is an information flow control library that lets you enforce
  various security policies, including mandatory and discretionary
  access control.
  .
  To get started, create an app skeleton with the `lio-simple` utility:
  .
  @
    $ cabal install lio-simple
    $ lio-simple my_app_name
    $ cd my_app_name
    $ cabal run
  @

homepage:            http://simple.cx
license:             LGPL-3
license-file:        LICENSE
author:              Hails team
maintainer:          hails@scs.stanford.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files:          template/*.tmpl

library
  build-depends:
      base < 6
    , bytestring
    , conduit
    , directory
    , filepath
    , lio                >= 0.11.4
    , simple             >= 0.8.0
    , wai                >= 2.1
    , wai-extra
    , warp
    , http-types
    , base64-bytestring
    , simple-templates
    , text
    , unix

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  exposed-modules:
    LIO.Web.Simple
    LIO.Web.Simple.Auth
    LIO.Web.Simple.DCLabel
    LIO.Web.Simple.TCB
  default-language: Haskell2010

executable lio-simple
  Main-Is: lio-simple.hs
  ghc-options: -Wall -fno-warn-unused-do-bind
  build-depends:
      base < 6
    , aeson
    , attoparsec
    , bytestring
    , cmdargs
    , directory
    , filepath
    , simple-templates >= 0.7.0
    , text
    , unordered-containers
  default-language: Haskell2010


source-repository head
  type: git
  location: git://github.com/scslab/lio.git
