Name:           quickcheck-lio-instances
Version:        0.9.1.0
Cabal-Version:  >= 1.8
Build-type:     Simple
License:        GPL
License-File:   LICENSE
Author:         HAILS team
Maintainer:	HAILS team <hails at scs dot stanford dot edu>
Synopsis:       LIO QuickCheck Intances
Category:       Test
Description:
  QuickCheck Instances for the Labeled IO library.

Library
  Build-Depends:
    base                 >= 4.5     && < 5.0,
    containers           >= 0.4.2.1 && < 1.0,
    bytestring           >= 0.9.2.1 && < 1.0,
    QuickCheck           >= 2.3     && < 2.6,
    quickcheck-instances >= 0.3.0   && < 1.0,
    lio                  == 0.10.*

  Ghc-options: -Wall -fno-warn-orphans

  Exposed-modules:
    LIO.DCLabel.Instances
    LIO.Instances
