Name:           quickcheck-lio-instances
Version:        0.10.0.1
Cabal-Version:  >= 1.8
Build-type:     Simple
License:        MIT
License-File:   LICENSE
Author:         HAILS team
Maintainer:	HAILS team <hails at scs dot stanford dot edu>
Synopsis:       LIO QuickCheck Intances
Category:       Test
Description:
  QuickCheck Instances for the Labeled IO library.

Library
  Build-Depends:
    base  >= 4.5
   ,containers
   ,bytestring
   ,QuickCheck
   ,quickcheck-instances
   ,lio

  Ghc-options: -Wall -fno-warn-orphans

  Exposed-modules:
    LIO.DCLabel.Instances
    LIO.Instances
