name:                Chat
version:             0.0.0.0
author:              Hails team
maintainer:          hails@scs.stanford.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable chat
  main-is: Main.hs
  ghc-options: -threaded -O2
  build-depends:
    base
    , bytestring
    , aeson
    , directory
    , filepath
    , lio-simple
    , http-types
    , transformers
    , simple
    , wai
    , wai-extra
    , warp
    , lio
    , lio-fs
    , conduit
    , simple-templates
    , text
    , containers
