name:                Memblog
version:             0.0.0.0
author:              Hails team
maintainer:          hails@scs.stanford.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable memblog
  main-is: Main.hs
  ghc-options: -threaded -O2
  build-depends:
    base
    , simple >= 0.8.0
    , lio
    , lio-simple
    , wai-extra
    , warp
    , lio-fs
    , filepath
    , directory
    , simple-templates
    , text
    , aeson
    , bytestring
