name:                Memblog
version:             0.0.0.0
author:              Hails team
maintainer:          hails@scs.stanford.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable memblog
  main-is: Main.hs
  ghc-options: -threaded -O2
  build-depends:
      base
    , lio-simple
    , simple
    , lio
    , wai-extra
    , warp
    , lio-fs
    , filepath
    , directory
    , simple-templates
    , text
    , aeson
    , bytestring
